examples/test/testpolicy16613.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16613
  namespace: namespace286
spec:
  podSelector:
    matchLabels:
      key40: value26
      key31: value40
      key25: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value25
          key43: value34
          key21: value10
